--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "type": "flarum-extension",
     "license": "MIT",
     "require": {
-        "flarum/core": "^0.1.0-beta.8"
+        "flarum/core": ">=0.1.0-beta.8 <0.1.0-beta.12"
     },
     "autoload": {
         "psr-4": {"ZerosOnesFun\\Pwa\\": "src/"}
